[gd_scene load_steps=3 format=3 uid="uid://bs6hiw1vqo8u2"]

[ext_resource type="Script" path="res://Scenes/Battle/battle_scene.gd" id="1_4u7fj"]

[sub_resource type="Theme" id="Theme_itfi6"]

[node name="BattleScene" type="Node2D"]
process_mode = 3
script = ExtResource("1_4u7fj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.114, 0.19, 0.94902)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_itfi6")
theme_override_constants/separation = 100

[node name="Player options" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/Player options"]
layout_mode = 2
text = "Player stuff"

[node name="EnemyLabel" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Enemy goes here"

[node name="Mini Game Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mini game goes here"

[node name="Button" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Leave battle"

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
